[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/gui/menus/reusable/ResourceIcon.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/map/feature/settlements/settlement_tooltip.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 141.0
margin_bottom = 84.0

[node name="NameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 133.0
margin_bottom = 12.0

[node name="PopulationContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 133.0
margin_bottom = 28.0

[node name="PopulationLabel" type="Label" parent="PanelContainer/VBoxContainer/PopulationContainer"]
margin_right = 107.0
margin_bottom = 12.0
hint_tooltip = "Decerases if resources are  missing. Increases otherwise."
mouse_filter = 0
text = "Population:"

[node name="PopulationValue" type="Label" parent="PanelContainer/VBoxContainer/PopulationContainer"]
margin_left = 111.0
margin_right = 133.0
margin_bottom = 12.0
text = "20"

[node name="WaterContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 133.0
margin_bottom = 44.0

[node name="ResourceIcon" parent="PanelContainer/VBoxContainer/WaterContainer" instance=ExtResource( 1 )]
margin_right = 0.0
margin_bottom = 12.0

[node name="WaterLabel" type="Label" parent="PanelContainer/VBoxContainer/WaterContainer"]
margin_left = 4.0
margin_right = 26.0
margin_bottom = 12.0
text = "10"

[node name="EnergyContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 133.0
margin_bottom = 60.0

[node name="ResourceIcon" parent="PanelContainer/VBoxContainer/EnergyContainer" instance=ExtResource( 1 )]
margin_right = 0.0
margin_bottom = 12.0

[node name="EnergyLabel" type="Label" parent="PanelContainer/VBoxContainer/EnergyContainer"]
margin_left = 4.0
margin_right = 26.0
margin_bottom = 12.0
text = "10"

[node name="MaterialsContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 133.0
margin_bottom = 76.0

[node name="ResourceIcon" parent="PanelContainer/VBoxContainer/MaterialsContainer" instance=ExtResource( 1 )]
margin_right = 0.0
margin_bottom = 12.0

[node name="MaterialsLabel" type="Label" parent="PanelContainer/VBoxContainer/MaterialsContainer"]
margin_left = 4.0
margin_right = 26.0
margin_bottom = 12.0
text = "10"
